--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
-    <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
+    <link <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
+
+    <link rel="stylesheet" href="/src/style/index.css" />
     <script
       src="https://kit.fontawesome.com/072e5df971.js"
       crossorigin="anonymous"
